fix test code, don't use guava to reduce dependencies